--- a/src/app/index.css
+++ b/src/app/index.css
@@ -1,1 +1,12 @@
 @import 'tailwindcss';
+
+@layer utilities {
+	.scrollbar-none::-webkit-scrollbar {
+		display: none;
+	}
+
+	.scrollbar-none {
+		-ms-overflow-style: none;
+		scrollbar-width: none;
+	}
+}
